Chỉnh sửa thông tin cơ bản của trường

--- a/public/css/thang.less
+++ b/public/css/thang.less
@@ -15,5 +15,35 @@
         }
       }
     }
+    .card-body {
+      .t-box {
+        h3.title {
+          margin: 0 0 10px 0;
+          font-size: 20px;
+          text-transform: uppercase;
+          font-weight: bold;
+          padding-bottom: 10px;
+          border-bottom: 1px solid #495057;
+        }
+        ul {
+          li {
+            list-style-type: decimal;
+            .title {
+              font-weight: bold;
+            }
+            p {
+              b {
+                font-weight: bold;
+              }
+              margin-bottom: 5px;
+              font-size: 15px;
+            }
+            &.univer-name {
+              font-size: 17px !important;
+            }
+          }
+        }
+      }
+    }
   }
 }
