--- a/public/css/thang.css
+++ b/public/css/thang.css
@@ -13,4 +13,28 @@
 .content .card .card-header .t-create-btn span {
   font-size: 20px;
 }
+.content .card .card-body .t-box h3.title {
+  margin: 0 0 10px 0;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #495057;
+}
+.content .card .card-body .t-box ul li {
+  list-style-type: decimal;
+}
+.content .card .card-body .t-box ul li .title {
+  font-weight: bold;
+}
+.content .card .card-body .t-box ul li p {
+  margin-bottom: 5px;
+  font-size: 15px;
+}
+.content .card .card-body .t-box ul li p b {
+  font-weight: bold;
+}
+.content .card .card-body .t-box ul li.univer-name {
+  font-size: 17px !important;
+}
 /*# sourceMappingURL=thang.css.map */
