--- a/public/css/thang.less
+++ b/public/css/thang.less
@@ -24,6 +24,18 @@
           font-weight: bold;
           padding-bottom: 10px;
           border-bottom: 1px solid #495057;
+          .staff {
+            font-size: 14px;
+            width: calc(~'100%/3');
+            display: inline-block;
+            text-align: center;
+          }
+          .t-right {
+            text-align: right;
+          }
+          .t-left {
+            text-align: left;
+          }
         }
         ul {
           li {
