thống kê cán bộ nhân viên

--- a/public/css/thang.css
+++ b/public/css/thang.css
@@ -75,4 +75,7 @@
   text-align: center;
   width: 40px;
 }
+.content .card .card-body .t-box .thong-tin-dao-tao .box-content p {
+  margin: 0;
+}
 /*# sourceMappingURL=thang.css.map */
