--- a/public/css/thang.less
+++ b/public/css/thang.less
@@ -85,6 +85,11 @@
               width: 40px;
             }
           }
+          .box-content {
+            p {
+              margin: 0;
+            }
+          }
         }
       }
     }
