--- a/public/css/thang.less
+++ b/public/css/thang.less
@@ -92,6 +92,10 @@
           }
         }
       }
+      .giang-vien {
+        padding-bottom: 30px;
+        border-bottom: 2px solid #333333;
+      }
     }
   }
 }
